# backend/api/routes/contents.js
@@ -35,10 +35,10 @@ import { contents_get_all, contents_get_content, create_content, edit_content, c
 
 router.get('/', contents_get_all);
 router.get('/:contentId', contents_get_content);
-router.post('/:contentId/addView', content_add_view);
+router.post('/:contentId/view', content_add_view);
 router.post('/', create_content);
 router.patch('/:contentId', edit_content);
-router.patch('/add/:contentId/', checkAuth, contents_update_content);
+router.patch('/:contentId/review', checkAuth, contents_update_content);
 router.patch('/:contentId/questions/:questionId/', checkAuth, contents_add_answer);
 
 export default router;
